Style: Adds a border radius when using full borders on touch screens.

--- a/src/styles/_theme.module.scss
+++ b/src/styles/_theme.module.scss
@@ -116,6 +116,7 @@ $h4: calc(51px - 30px);
   border-bottom: 5px solid $color;
   @media screen and (pointer: coarse) {
     border: 5px solid $color;
+    border-radius: $buttonRadius;
     @content;
   }
 }
