Style: Sets several graphic images to 90vw instead of 100%.

--- a/src/styles/attention-getter-image.module.scss
+++ b/src/styles/attention-getter-image.module.scss
@@ -34,7 +34,7 @@ div.container {
   @include Theme.imageHover(Theme.$darkHeadshot, Theme.$lightHeadshot);
   transition-duration: #{Theme.$transitionShort}s;
   @include Theme.mediaQuery(Theme.$tabletViewport) {
-    width: 100%;
+    width: 90vw;
     height: auto;
     max-width: Theme.$Headshots_Sm;
   }
