--- a/src/styles/GroupPhoto.module.scss
+++ b/src/styles/GroupPhoto.module.scss
@@ -10,7 +10,7 @@
   transition: all #{Theme.$transitionShort}s;
   @include Theme.imageHover(Theme.$darkHeadshot, Theme.$lightHeadshot);
   @include Theme.mediaQuery(Theme.$LgPhoneViewport) {
-    width: 100%;
+    width: 90vw;
     height: auto;
   }
 }
