--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -24,8 +24,8 @@ main {
 // Oreo focus for better accessibility
 :focus-visible {
   position: relative;
-  outline: 9px double Theme.$secondaryGreen !important;
-  box-shadow: 0 0 0 6px Theme.$lightSecondaryGreen !important;
+  outline: 9px double Theme.$black !important;
+  box-shadow: 0 0 0 6px Theme.$white !important;
   border: none !important;
   z-index: 999 !important; // Focus should be on top of everything.
 }
