--- a/src/styles/modal.module.scss
+++ b/src/styles/modal.module.scss
@@ -26,7 +26,7 @@ $svgWxH: 57px;
   width: fit-content;
   position: relative;
   background-color: Theme.$darkPrimary;
-  padding: Theme.$spaceBetweenElements / 2;
+  padding: calc(Theme.$spaceBetweenElements / 2);
   border-radius: Theme.$bigButtonRadius;
   @include Theme.mediaQuery(Theme.$SmPhoneViewport) {
     margin: 0;
