Style: Centers elements that are not text-based in the sidetext.

--- a/src/styles/attention-getter-image.module.scss
+++ b/src/styles/attention-getter-image.module.scss
@@ -12,6 +12,9 @@ div.container {
 
 .side-text {
   flex: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   @include Theme.mediaQuery(Theme.$tabletViewport) {
     flex: 1;
   }
