--- a/src/styles/new-dog-form.module.scss
+++ b/src/styles/new-dog-form.module.scss
@@ -1,57 +1,127 @@
-.form {
+@use "@styles/_theme.module.scss" as Theme;
+
+@mixin darkButton {
+  button,
+  input,
+  select {
+    margin-top: 0.5rem;
+    padding: 1rem;
+    font-size: 1rem;
+
+    @include Theme.basicButton(Theme.$lightGray, Theme.$white, Theme.$black) {
+      border: 2px solid Theme.$darkGray;
+
+      &:hover,
+      &:active {
+        border: 2px solid Theme.$darkGray;
+        color: Theme.$black;
+      }
+    }
+    @media screen and (pointer: coarse) {
+      border: 2px solid Theme.$darkGray;
+      border-radius: Theme.$buttonRadius;
+    }
+  }
+}
+
+@mixin lightButton {
+  button,
+  input,
+  select {
+    padding: 1rem;
+    font-size: 1rem;
+
+    @include Theme.basicButton(Theme.$white, Theme.$lightGray, Theme.$black) {
+      border: 2px solid Theme.$darkGray;
+
+      &:hover,
+      &:active {
+        border: 2px solid Theme.$darkGray;
+        color: Theme.$black;
+      }
+    }
+    @media screen and (pointer: coarse) {
+      border: 2px solid Theme.$darkGray;
+      border-radius: Theme.$buttonRadius;
+    }
+  }
+}
+
+.main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  margin-top: 50px;
 
   h1 {
     font-size: 2rem;
     margin-bottom: 10px;
   }
-
-  p {
-    font-size: 1rem;
-    margin-bottom: 10px;
+  h3,
+  h4 {
+    margin-bottom: 1rem;
   }
+
+  @include darkButton;
 
   form {
-    display: flex;
-    flex-direction: column;
-    align-items: normal;
-    justify-content: center;
-    margin-top: 20px;
+    border: 3px dashed Theme.$darkGray;
+    padding: 1rem;
+    margin: 0.3rem;
+    button[type="submit"] {
+      width: 100%;
+      padding: 1rem;
+      font-size: 1.5rem;
+      @include Theme.basicButton(Theme.$white, Theme.$darkGray);
+    }
   }
 
-  label {
-    font-size: 1rem;
-  }
-
-  select {
-    font-size: 1rem;
-    margin-top: 10px;
-  }
-
-  input {
-    font-size: 1rem;
-    margin-top: 10px;
-  }
-
-  button {
-    font-size: 1rem;
-    margin-top: 10px;
+  @include Theme.mediaQuery(Theme.$LgPhoneViewport) {
+    hr {
+      display: none;
+    }
   }
 }
 .stats {
   margin: 2em;
   border: 3px solid #333;
   padding: 1em;
+
+  li {
+    font-size: 1.5rem;
+  }
+
+  button {
+    padding: 0.5rem;
+    margin-top: 1rem;
+    width: 100%;
+    @include Theme.basicButton(Theme.$white, Theme.$darkGray);
+  }
 }
 
 .input-with-button {
   display: flex;
+  gap: 1rem;
 }
 
-.form-input:nth-of-type(odd) {
-  background-color: pink;
+.form-input {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  width: 100%;
+
+  &:nth-of-type(odd) {
+    background-color: Theme.$lightGray;
+
+    @include lightButton;
+  }
+}
+
+#what-to-work {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: fit-content;
+  select {
+    width: fit-content;
+  }
 }
