Fix: Unrecorded mothers/fathers are displaeyed correctly.
Now displays correct cursor on hover too.
Also removes doubled borders for stacked tab menu items

--- a/src/styles/headshots.module.scss
+++ b/src/styles/headshots.module.scss
@@ -68,7 +68,7 @@
 .unrecordedDog {
   outline: Theme.$unrecordedDogOutline;
   outline-offset: -1px;
-  cursor: auto;
+  cursor: default;
   box-shadow: none;
   &:active {
     box-shadow: none;
