--- a/src/styles/_theme.module.scss
+++ b/src/styles/_theme.module.scss
@@ -42,6 +42,7 @@ $unrecordedDogOutline: $outlineWidth solid $lightPrimary;
 $momShadow: 0 0 0 calc($outlineWidth * 0.667) $lightMom;
 $dadShadow: 0 0 0 calc($outlineWidth * 0.667) $lightDad;
 $unrecordedDogShadow: 0 0 0 calc($outlineWidth * 0.667) $primary;
+$border: 5px;
 
 // Hover Effects
 $scaleOnHover: 1.07;
@@ -287,6 +288,7 @@ $h4: calc(51px - 30px);
   accentBlue: $accentBlue;
   bigButtonRadius: $bigButtonRadius; // 32px
   black: $black;
+  border: $border;
   boxShadowBlur: $boxShadowBlur; // Needs to be populated in the mixin.
   boxShadowX: $boxShadowX; // Needs to be populated in the mixin.
   boxShadowY: $boxShadowY; // Needs to be populated in the mixin.
