Feat: Adds <strong> tags to the globals for <b> tags.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -94,7 +94,7 @@ hr {
   background-color: Theme.$secondaryGreen;
 }
 
-b {
+b, strong {
   font-weight: 700 !important;
   margin: 0 !important;
 }
